stateDiagram-v2
    %% L++ State Diagram: Skill Registry
    [*] --> idle
    idle --> scanned : SCAN
    scanned --> scanned : SCAN
    scanned --> viewing : SELECT
    viewing --> scanned : BACK
    viewing --> viewing : SELECT
    scanned --> scanned : EXPORT
    viewing --> viewing : EXPORT
    scanned --> idle : RESET